# portfolio-ledger

./: .env  .env.template  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.sh
app/: __init__.py  config.py  main.py
app/cli/: __init__.py  prompts.py
app/models/: __init__.py  enums.py  tax_lot.py  transaction.py
app/parsers/: __init__.py  base.py  registry.py  scalable_capital.py
app/reports/: __init__.py  _schema.py  csv_report.py  excel_report.py  pdf_report.py  report_manager.py
app/services/: __init__.py  cost_basis.py  fifo_engine.py  holdings.py  ingestion.py  market_data.py  portfolio.py  tax_lot_engine.py  transfer_pairs.py
app/utils/: __init__.py  date_utils.py  decimal_utils.py  logging.py  text.py
input/rakshana/: 2026-05-09_17-56-56_ScalableCapital-Broker-Transactions.csv  2026-05-14_21-28-58_Scalable_Capital_Scalable_Broker_Transactions.csv  2026-05-16_09-17-12_Scalable_Capital_Scalable_Broker_Transactions.csv
input/ramu/: 2026-05-09_11-05-03_ScalableCapital-Broker-Transactions.csv  2026-05-11_14-48-19_ScalableCapital-Broker-Transactions.csv  2026-05-12_19-13-44_ScalableCapital-Broker-Transactions.csv  (+3 more)
tests/: test_combined_pdf_layout.py  test_combined_price_totals.py  test_combined_schema.py  test_cost_basis.py  test_cost_basis_schema.py  test_decimal_utils.py  test_fifo_engine.py  test_holdings.py  test_ingestion.py  test_isin_ignore.py  test_market_data.py  test_pdf_report.py  test_portfolio.py  test_report_manager.py  test_scalable_capital_parser.py  test_tax_lot_engine.py  test_text.py  test_transfer_pairs.py
(+9 files in other folders)
