[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "portfolio-ledger"
version = "0.1.0"
description = "Scalable Capital transaction processor and tax-lot reports"
readme = "README.md"
requires-python = ">=3.12"
dynamic = ["dependencies"]

[project.scripts]
pl = "app.main:app"
portfolio-ledger = "app.main:app"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
